--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "migrate-customers.js",
   "scripts": {
+    "lint": "run-p lint:*",
+    "lint:eslint": "eslint --ext .js,.ts ${PROJECT:-./}",
+    "lint:tsc": "tsc --project tsconfig-ci-lint.json",
+    "lint:prettier": "prettier --check .",
     "tax-report": "node -r esbuild-runner/register tax-report/program.ts"
   },
   "author": "",
@@ -14,20 +18,33 @@
     "aws-sdk": "^2.1119.0",
     "commander": "^9.2.0",
     "csv": "^6.2.5",
-    "dotenv": "^16.0.1",
-    "lworks-client": "^2.13.0",
-    "node-fetch": "^2.6.7",
-    "prompt-sync": "^4.2.0",
+    "csv-stringify": "^6.4.4",
+    "fast-memoize": "^2.5.2",
+    "lworks-client": "4.0.0",
+    "pino": "^8.16.2",
+    "pino-lambda": "^4.3.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "@types/node-fetch": "^2.6.2",
-    "@types/nodemailer": "^6.4.6",
-    "@types/prompt-sync": "^4.1.1",
-    "@types/smtp-server": "^3.5.7",
-    "esbuild": "^0.14.47",
-    "esbuild-runner": "^2.2.1",
-    "typescript": "^4.7.4"
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "dotenv": "^16.0.1",
+    "esbuild": "^0.17.16",
+    "esbuild-loader": "^2.20.0",
+    "esbuild-runner": "^2.2.2",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-sonarjs": "^0.18.0",
+    "eslint-plugin-unicorn": "^45.0.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
+    "typescript": "^5.1.5"
   }
 }
