--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
+    "@types/async-retry": "^1.4.8",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
