better output aroud USD. Use and cache more precise exchange rate from saucer

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "commander": "^9.2.0",
     "csv": "^6.2.5",
     "csv-stringify": "^6.4.4",
+    "date-fns": "^3.3.0",
     "fast-memoize": "^2.5.2",
     "file-system-cache": "^2.4.4",
     "lworks-client": "4.0.0",
