update to use hashscan for links, change order of NFT in csv output, update readme, add license

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:eslint": "eslint --ext .js,.ts ${PROJECT:-./}",
     "lint:tsc": "tsc --project tsconfig-ci-lint.json",
     "lint:prettier": "prettier --check .",
-    "tax-report": "node -r esbuild-runner/register tax-report/program.ts"
+    "transaction-report": "node -r esbuild-runner/register transaction-report/program.ts"
   },
   "author": "",
   "license": "UNLICENSED",
